Added macOS libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,12 @@ if (WIN32)
     else()
         list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/windows/release")
     endif()
+elseif (APPLE)
+    if (CMAKE_BUILD_TYPE MATCHES Debug)
+        list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/macOS/debug")
+    else()
+        list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/macOS/release")
+    endif()
 endif()
 
 find_package(Dawn REQUIRED)
